--- a/examples/res/layout/main.xml
+++ b/examples/res/layout/main.xml
@@ -5,10 +5,19 @@
     android:layout_height="fill_parent"
     android:fillViewport="true" >
 
+    
+    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
+        
+        <ImageView
+            android:id="@+id/focusdashboard"
+ 			android:contentDescription="@drawable/focusdashboard"
+            android:src="@drawable/focusdashboard"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/steering_wheel_angle_label"
