--- a/examples/res/layout/main.xml
+++ b/examples/res/layout/main.xml
@@ -17,7 +17,8 @@
  			android:contentDescription="@drawable/focusdashboard"
             android:src="@drawable/focusdashboard"
         	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"/>
+        	android:layout_height="wrap_content"
+        	/>
 
         <TextView
             android:id="@+id/steering_wheel_angle_label"
