--- a/examples/res/layout/main.xml
+++ b/examples/res/layout/main.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/focusdashboard"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
+        	android:layout_gravity="center"
         	/>
 
         <TextView
@@ -27,7 +28,7 @@
 
         <TextView
             android:id="@+id/steering_wheel_angle"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/vehicle_speed_label"
@@ -36,7 +37,7 @@
 
         <TextView
             android:id="@+id/vehicle_speed"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/fuel_consumed_label"
@@ -45,7 +46,7 @@
 
         <TextView
             android:id="@+id/fuel_consumed"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/fuel_level_label"
@@ -54,7 +55,7 @@
 
         <TextView
             android:id="@+id/fuel_level"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/odometer_label"
@@ -63,7 +64,7 @@
 
         <TextView
             android:id="@+id/odometer"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/fine_odometer_label"
@@ -72,7 +73,7 @@
 
         <TextView
             android:id="@+id/fine_odometer"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/wiper_status_label"
@@ -81,7 +82,7 @@
 
         <TextView
             android:id="@+id/wiper_status"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/brake_pedal_status_label"
@@ -90,7 +91,7 @@
 
         <TextView
             android:id="@+id/brake_pedal_status"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/parking_brake_status_label"
@@ -99,7 +100,7 @@
 
         <TextView
             android:id="@+id/parking_brake_status"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/headlamp_status_label"
@@ -108,7 +109,7 @@
 
         <TextView
             android:id="@+id/headlamp_status"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/engine_speed_label"
@@ -117,7 +118,7 @@
 
         <TextView
             android:id="@+id/engine_speed"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/torque_at_transmission_label"
@@ -126,7 +127,7 @@
 
         <TextView
             android:id="@+id/torque_at_transmission"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/accelerator_pedal_position_label"
@@ -135,7 +136,7 @@
 
         <TextView
             android:id="@+id/accelerator_pedal_position"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/transmission_gear_pos_label"
@@ -144,7 +145,7 @@
 
         <TextView
             android:id="@+id/transmission_gear_pos"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/ignition_label"
@@ -153,7 +154,7 @@
 
         <TextView
             android:id="@+id/ignition"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/latitude_label"
@@ -162,7 +163,7 @@
 
         <TextView
             android:id="@+id/latitude"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/longitude_label"
@@ -171,7 +172,7 @@
 
         <TextView
             android:id="@+id/longitude"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/android_latitude_label"
@@ -180,7 +181,7 @@
 
         <TextView
             android:id="@+id/android_latitude"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/android_longitude_label"
@@ -189,7 +190,7 @@
 
         <TextView
             android:id="@+id/android_longitude"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/button_event_label"
@@ -198,7 +199,7 @@
 
         <TextView
             android:id="@+id/button_event"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 
         <TextView
             android:id="@+id/door_status_label"
@@ -207,7 +208,7 @@
 
         <TextView
             android:id="@+id/door_status"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
         
     </LinearLayout>
 
