--- a/enabler/res/layout/main.xml
+++ b/enabler/res/layout/main.xml
@@ -7,7 +7,7 @@
             style="@style/DefaultFont"
             android:text="@string/vehicle_service_status_label" />
     <TextView android:id="@+id/vehicle_service_status"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
     <TextView android:id="@+id/recording_status_label"
             style="@style/DefaultFont"
             android:text="@string/recording_status_label" />
@@ -17,5 +17,5 @@
             style="@style/DefaultFont"
             android:text="@string/message_count_label" />
     <TextView android:id="@+id/message_count"
-            style="@style/DefaultFont" />
+            style="@style/RedFont" />
 </LinearLayout>
