--- a/enabler/res/values/styles.xml
+++ b/enabler/res/values/styles.xml
@@ -5,4 +5,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">25sp</item>
     </style>
+       <style name="RedFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#ff0000</item>
+    </style>
 </resources>
