--- a/examples/res/values/styles.xml
+++ b/examples/res/values/styles.xml
@@ -1,15 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="DefaultFont" parent="@android:style/TextAppearance.Medium">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+	<style name="DefaultFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:textSize">25sp</item>
+        <item name="android:gravity">center_horizontal</item>
+	</style>
+	
+	<style name="ExtraSpacingDefaultFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:gravity">center_horizontal</item>
+	</style>
+
+	<style name="OrangeFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#FF8800</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center_horizontal</item>
+	</style>
+   
+   	<style name="BlackFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#000001</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
     
-    <style name="RedFont" parent="@android:style/TextAppearance.Medium">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+   	<style name="LessSpacingBlackFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">#ff0000</item>
+        <item name="android:textColor">#000001</item>
+        <item name="android:gravity">top</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
+   
+  	<color name="LightBlue">#33B5E5</color>
+  
+  	<color name="NavyBlue">#0099CC</color>
+  	
+  	<color name="VividBlue">#FF0000FF</color>
+  
+  	<color name="Purple">#AA66CC</color>
+  
+  	<color name="DarkPurple">#9933CC</color>
+  
+  	<color name="LightOrange">#FFBB33</color>
+  
+  	<color name="Orange">#FF8800</color>
+ 
+  	<color name="Green">#99CC00</color>
+  
+  	<color name="DarkGreen">#669900</color>
+  
+  	<color name="Red">#CC0000</color>
+
 </resources>
